--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,8 @@
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}">Home</a></li>
+		<li><a href="{{ site.url }}/posts/">All Posts</a></li>
+		<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
