--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}">Home</a></li>
-		<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-		<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+		<li><a href="{{ site.url }}/posts/">Posts</a></li>
+		<li><a href="{{ site.url }}/tags/">Tags</a></li>
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
