--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,6 @@
 		<li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="{{ site.url }}/posts/">Posts</a></li>
 		<li><a href="{{ site.url }}/tags/">Tags</a></li>
+		<li><a href="{{ site.url }}/about/">About</a></li>
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
