--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,6 @@
 		<li><a href="{{ site.url }}/posts/">Posts</a></li>
 		<li><a href="{{ site.url }}/tags/">Tags</a></li>
 		<li><a href="http://github.com/{{ site.owner.github }}"><i class="icon-github"></i> GitHub</a></li>
-		<li><a href="mailto:{{ site.owner.email }}"><i class="icon-envelope"></i> Email</a></li>
+		<li><a href="mailto:{{ site.owner.email }}"><i class="icon-home"></i> Email</a></li>
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
