--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,10 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
-		<li><a href="{{ site.url }}">Home</a></li>
+		<li><a href="{{ site.url }}"><i class="icon-home"></i>Home</a></li>
 		<li><a href="{{ site.url }}/posts/">Posts</a></li>
-		<li><a href="{{ site.url }}/tags/">Tags</a></li>
+		<li><a href="{{ site.url }}/tags/"><i class="icon-tags"></i>Tags</a></li>
+		<li><a href="http://github.com/{{ site.owner.github }}"><i class="icon-github"></i> GitHub</a></li>
+		<li><a href="mailto:{{ site.owner.email }}"><i class="icon-envelope"></i> Email</a></li>
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
