--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}"><i class="icon-home"></i>Home</a></li>
-		<li><a href="{{ site.url }}/archives/"><i class="icon-archive"></i>Archives</a></li>
+		<li><a href="{{ site.url }}/posts/"><i class="icon-archive"></i>Archives</a></li>
 		<li><a href="{{ site.url }}/tags/"><i class="icon-tags"></i>Tags</a></li>
 		<li><a href="http://github.com/{{ site.owner.github }}"><i class="icon-github"></i> GitHub</a></li>
 		<li><a href="mailto:{{ site.owner.email }}"><i class="icon-envelope"></i> Email</a></li>
