--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,9 @@
 
 <!-- Load Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
-
+<script src="{{ site.url }}/assets/prettify/prettify.js"></script>
+<script src="{{ site.url }}/assets/prettify/run_prettify.js"></script>
+<link rel="stylesheet" href="{{ site.url }}/assets/prettify/prettify.css">
 <!-- Icons -->
 <!-- 16x16 -->
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
