--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,3 +64,14 @@
 {% unless background contains 'http://' or background contains 'https://' %}{% capture background %}{{ site.url }}/images/{{ background }}{% endcapture %}{% endunless %}
 <style type="text/css">body {background-image:url({{ background }});}</style>
 {% endif %}
+<script type="text/javascript">
+  $(function(){
+    $("pre").addClass("prettyprint linenums");
+    prettyPrint();
+    $('.entry a').each(function(){
+      if($(this).attr("href").indexOf("heiniuhaha") == -1){
+        $(this).attr("target", "_blank");
+      }
+    })
+  });
+</script>
