--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
 <script src="{{ site.url }}/assets/prettify/prettify.js"></script>
 <script src="{{ site.url }}/assets/prettify/run_prettify.js"></script>
-<script src="{{ site.url }}/assets/js/scripts.min.js"></script>
+<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"></script>
 
 <link rel="stylesheet" href="{{ site.url }}/assets/prettify/prettify.css">
 <!-- Icons -->
