--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@
 {% endif %}
 <script type="text/javascript">
   $(function(){
-    $("pre").addClass("prettyprint");
+    $("pre").addClass("prettyprint").attr('style', 'overflow:auto');
     prettyPrint();
   });
 </script>
